--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "opt/vim-colors-solarized"]
 	path = opt/vim-colors-solarized
 	url = https://github.com/altercation/vim-colors-solarized
+[submodule "start/nerdtree"]
+	path = start/nerdtree
+	url = git@github.com:scrooloose/nerdtree.git
