--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "start/vim-devicons"]
 	path = start/vim-devicons
 	url = git@github.com:ryanoasis/vim-devicons.git
+[submodule "test/ashcoll-test"]
+	path = test/ashcoll-test
+	url = git@github.com:ashcoll/ashcoll.git
